Refactor to publish book + swagger stuff
