# src/docs/swagger.json
@@ -11,9 +11,9 @@
     "paths": {
         "/books": {
             "post": {
-                "description": "publishes a book",
+                "description": "publishes a book, the book data should follow the models.NewBookRequest in JSON",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -24,8 +24,22 @@
                 "summary": "publish a book",
                 "parameters": [
                     {
-                        "description": "Book Request",
-                        "name": "user",
+                        "type": "string",
+                        "description": "Book Data",
+                        "name": "data",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "Book Picture",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "description": "Don't need to send this in json, this param is only here to reference NewBookRequest, DONT SEND PICTURE in JSON",
+                        "name": "book",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -289,6 +303,59 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorDetails"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorDetails"
+                        }
+                    }
+                }
+            }
+        },
+        "/books/{id}/review": {
+            "post": {
+                "description": "Add review to a book",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "books"
+                ],
+                "summary": "Add review to a book",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Book Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Review Request",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.NewReviewRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorDetailsWithParams"
                         }
                     },
                     "500": {
@@ -664,6 +731,17 @@
             "properties": {
                 "rating": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.NewReviewRequest": {
+            "type": "object",
+            "required": [
+                "review"
+            ],
+            "properties": {
+                "review": {
+                    "type": "string"
                 }
             }
         },
